<resources>
    <string name="app_name">MaintenanceInspectionApplication</string>
    <string name="default_text">default_text</string>
    <string name="edit_task_title">Task Title</string>
    <string name="edit_task_content">Task Content</string>
    <string name="button_save">Save</string>
    <string name="delete">Delete</string>
    <string name="due_date">Due Date</string>
    <string name="completed">Completed</string>
    <string name="share">Share</string>
    <string name="add_task">add_task</string>
    <string name="channel_name">channel_name</string>
    <string name="channel_description">channel_description</string>
</resources>