<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/main"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    android:background="@color/light_blue_background">

    <EditText
        android:id="@+id/edit_task_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/edit_text_border"
        android:gravity="center"
        android:hint="@string/edit_task_title"
        android:inputType="text"
        android:minHeight="48dp"
        android:padding="16dp"
        android:textColor="@color/black"
        android:textSize="18sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/edit_task_content"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:hint="@string/edit_task_content"
        android:inputType="textMultiLine"
        android:padding="16dp"
        android:textSize="18sp"
        android:textColor="@color/black"
        android:gravity="top"
        android:background="@drawable/edit_text_border" />

    <EditText
        android:id="@+id/edit_task_due_date"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/edit_text_border"
        android:focusable="false"
        android:hint="@string/due_date"
        android:inputType="date"
        android:minHeight="48dp"
        android:padding="16dp"
        android:textColor="@color/due_date_red"
        android:textSize="18sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="end">

        <CheckBox
            android:id="@+id/checkBox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity=""
            android:layout_marginEnd="16dp"
            android:text="@string/completed" />

        <Button
            android:id="@+id/button_save"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button_save"
            android:backgroundTint="@color/save_button_color"
            android:textColor="@android:color/white"
            android:layout_marginEnd="8dp"/>

        <Button
            android:id="@+id/button_share"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/share"
            android:backgroundTint="@color/share_button_color"
            android:textColor="@android:color/white"/>
</LinearLayout>
</LinearLayout>